# ThreadLine

./: .gitignore  package-lock.json  package.json  tailwind.config.js  项目开发需求手册.txt  项目架构与技术路线设计.md
.agent/: tasks.md
docs/: IMAP实现指南.md
src/: App.tsx  index.css
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/artifacts/: archive.rs  mod.rs
src-tauri/src/commands/: artifact.rs  mail.rs  mod.rs  oauth.rs  project.rs  search.rs  settings.rs  sync.rs
src-tauri/src/events/: mod.rs
src-tauri/src/index_scheduler/: mod.rs
src-tauri/src/mail/: imap_client.rs  mod.rs  oauth.rs  parser.rs  providers.rs  sync.rs
src-tauri/src/project/: classifier.rs  mod.rs
src-tauri/src/repository/: mod.rs  project.rs
src-tauri/src/search/: mod.rs
src-tauri/src/storage/: config.rs  database.rs  mock_data.rs  mod.rs
src-tauri/src/utils/: mod.rs
src/components/email/: AddAccountSheet.tsx  OAuthSetupSheet.tsx
src/components/layout/: AppLayout.tsx  PageContainer.tsx
src/components/project/: ProjectCard.tsx  TimelineView.tsx
src/components/ui/: avatar-group.tsx  button.tsx  card.tsx  context-menu.tsx  dropdown-menu.tsx  input.tsx  tabs.tsx
src/contexts/: SyncContext.tsx
src/hooks/: useEventListener.ts
src/lib/: utils.ts
src/pages/: ArtifactsPage.tsx  InboxPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SettingsPage.tsx
src/types/: events.ts
