[package]
name = "app"
version = "0.1.0"
description = "ThreadLine - Project-centric Mail Workspace"
authors = ["ThreadLine Team"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# Mail Protocols
async-imap = "0.9"
lettre = "0.11"
mail-parser = "0.9"

# Search Engine
tantivy = "0.22"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Utilities
lazy_static = "1.4"
base64 = "0.22"
uuid = { version = "1.8", features = ["v4", "serde"] }
