[package]
name = "app"
version = "0.1.0"
description = "ThreadLine - Project-centric Mail Workspace"
authors = ["ThreadLine Team"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# Mail Protocols
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
lettre = "0.11"
mail-parser = "0.9"

# Search Engine
tantivy = "0.22"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# OAuth 2.0
oauth2 = "4.4"
url = "2.5"
rand = "0.8"
sha2 = "0.10"
tiny_http = "0.12"
open = "5.0"

# Utilities
lazy_static = "1.4"
base64 = "0.22"
uuid = { version = "1.8", features = ["v4", "serde"] }
